feat: Demo version with AI chat [0.7.0]
